fixed page alignment problem
git-svn-id: svn://p51.austin.ibm.com/raptor/trunk@48 c4f43c74-3acd-11dc-88bc-9584e4a9cacb

--- a/public/stylesheets/pmrs.css
+++ b/public/stylesheets/pmrs.css
@@ -108,11 +108,11 @@ body {
 }
 
 .even {
-    background-color: Salmon;
+    background-color: #f0f0ff;
 }
 
 .odd {
-    background-color: SandyBrown;
+    background-color: #f8f8ff;
 }
 
 #click-header {
